--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "fs-extra": "^9.0.1",
     "nodegit": "^0.27.0"
   },
   "scripts": {
